//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String
  email String [unique, not null]
  stripeCustomerId String [unique]
  colorScheme String [not null, default: 'theme-orange']
  Subscription Subscription
  Notes Note [not null]
}

Table Subscription {
  stripeSubscriptionId String [pk]
  invterval String [not null]
  status String [not null]
  planId String [not null]
  currentPeriodStart Int [not null]
  currentPeriodEnd Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [unique, not null]
}

Table Note {
  id String [pk]
  title String [not null]
  description String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User User
  userId String
}

Ref: Subscription.userId - User.id

Ref: Note.userId > User.id